test ci 19 on main

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -2,8 +2,8 @@
 current_version = 0.0.4
 
 [bumpversion:file:pidroidbot_discord/__init__.py]
-search = __version__ = '{current_version}'
-replace = __version__ = '{new_version}'
+search = __version__ = "{current_version}"
+replace = __version__ = "{new_version}"
 
 [bumpversion:file:docs/source/conf.py]
 search = release = "v{current_version}"
