--- a/.github/workflows/do-release.yml
+++ b/.github/workflows/do-release.yml
@@ -152,4 +152,4 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: "bash docs/buildDocs.sh"
-#      shell: bash
+      shell: bash
