--- a/.github/workflows/do-release.yml
+++ b/.github/workflows/do-release.yml
@@ -1,5 +1,5 @@
 ---
-name: Build new release
+name: Build
 
 on:
   push:
@@ -9,10 +9,10 @@ on:
       - test
 
 jobs:
-  build:
+  new_release:
     runs-on: ubuntu-latest
     if: "!startsWith(github.event.head_commit.message, '[SKIP]')"
-    name: Build
+    name: New Release
 
     steps:
       - name: checkout
@@ -46,6 +46,11 @@ jobs:
         run: |
           echo "OLD_VERSION=v$(awk '/^current_version/{print $3}' .bumpversion.cfg)" >> $GITHUB_ENV
 
+      - name: "Upload coverage to Codecov"
+        uses: codecov/codecov-action@v1
+        with:
+          fail_ci_if_error: true
+
       - name: Generate base.pot
         run: pybabel extract -o locales/base.pot pidroidbot_discord/
 
@@ -61,13 +66,6 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           translations-path: 'locales/**/LC_MESSAGES/*.po'
-
-#      - name: Check i18n coverage Documentation
-#        id: i18nCoverageDoc
-#        uses: alexkiro/i18n-coverage@v1.0.1
-#        with:
-#          token: ${{ secrets.GITHUB_TOKEN }}
-#          translations-path: 'docs/locales/**/LC_MESSAGES/*.po'
 
       - name: Update Readme
         run: |
@@ -135,7 +133,7 @@ jobs:
     runs-on: ubuntu-latest
     container: debian:buster-slim
     name: Documentations
-    needs: build
+    needs: new_release
 
     steps:
 
