--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,5 +1,14 @@
 [bumpversion]
 current_version = 0.0.25
+parse = (?P<major>\d+).(?P<minor>\d+).?((?P<patch>\d+))?(\.(?P<branch>(dev|test))_(?P<build>\d+))?
+serialize =
+	{major}.{minor}.{patch}.{branch}_{build}
+	{major}.{minor}.{patch}
+
+[bumpversion:part:branch]
+values =
+	dev
+	test
 
 [bumpversion:file:pidroidbot_discord/__init__.py]
 search = __version__ = "{current_version}"
@@ -10,5 +19,5 @@ search = release = "v{current_version}"
 replace = release = "v{new_version}"
 
 [bumpversion:file:README.md]
-search = ##version##
-replace = v{new_version}
+search = "v{current_version}"
+replace = "v{new_version}"
