test ci 40.2 branch managed

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -18,6 +18,6 @@ replace = __version__ = "{new_version}"
 search = release = "v{current_version}"
 replace = release = "v{new_version}"
 
-[bumpversion:file:README.md]
-search = "v{current_version}"
-replace = "v{new_version}"
+; [bumpversion:file:README.md]
+; search = "v{current_version}"
+; replace = "v{new_version}"
