--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,14 +1,10 @@
 [bumpversion]
 current_version = 0.0.25
-parse = (?P<major>\d+).(?P<minor>\d+).?((?P<patch>\d+))?(\.(?P<branch>(dev|test))_(?P<build>\d+))?
+parse = (?P<major>\d+).(?P<minor>\d+).?((?P<patch>\d+))?(\.(?P<branch>\w+)_(?P<build>\d+))?
 serialize =
 	{major}.{minor}.{patch}.{branch}_{build}
 	{major}.{minor}.{patch}
-
-[bumpversion:part:branch]
-values =
-	dev
-	test
+	{major}.{minor}
 
 [bumpversion:file:pidroidbot_discord/__init__.py]
 search = __version__ = "{current_version}"
