--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -12,3 +12,7 @@ replace = __version__ = "{new_version}"
 [bumpversion:file:docs/source/conf.py]
 search = release = "v{current_version}"
 replace = release = "v{new_version}"
+
+[bumpversion:file:README.md]
+search = "v{current_version}"
+replace = "v{new_version}"
