test ci 40.12 branch managed

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -14,5 +14,5 @@ search = release = "v{current_version}"
 replace = release = "v{new_version}"
 
 [bumpversion:file:README.md]
-search = "v{current_version}"
-replace = "v{new_version}"
+search = v{current_version}
+replace = v{new_version}
