--- a/.github/workflows/do-release.yml
+++ b/.github/workflows/do-release.yml
@@ -146,11 +146,10 @@ jobs:
         run: |
           sudo apt-get install ruby-full
           sudo gem install github_changelog_generator
-          l_LAST_TAG="$( git for-each-ref '--format=%(refname:lstrip=-1)' | grep -iE '^(v.*)$' | sort -Vr | head -1 )"
-          echo "INFO > Last tag : ${l_LAST_TAG}"
-          github_changelog_generator --future-release "v${{ env.NEW_VERSION }}" --token "${{ secrets.GITHUB_TOKEN }}" --since-tag "${l_LAST_TAG}" -o docs/CHANGELOG.md
+          l_LAST_TAG="`git for-each-ref '--format=%(refname:lstrip=-1)' | grep -iE '^(v.*)$' | sort -Vr | head -1 `"
+          echo "INFO > Last tag : $l_LAST_TAG"
+          github_changelog_generator --future-release "v${{ env.NEW_VERSION }}" --token "${{ secrets.GITHUB_TOKEN }}" --since-tag "$l_LAST_TAG" -o docs/CHANGELOG.md
           github_changelog_generator --future-release "v${{ env.NEW_VERSION }}" --token "${{ secrets.GITHUB_TOKEN }}"
-        shell: bash
 
       - name: Commit version
         run: |
