--- a/.github/workflows/do-release.yml
+++ b/.github/workflows/do-release.yml
@@ -36,7 +36,7 @@ jobs:
           echo "SKIPBUMP=FALSE" >> $GITHUB_ENV
           echo "BRANCH=${GITHUB_REF:11}" >> $GITHUB_ENV
           echo "OLD_VERSION=$(awk '/^current_version/{print $3}' .bumpversion.cfg)" >> $GITHUB_ENV
-          echo "LAST_TAG=$( git for-each-ref '--format=%(refname:lstrip=-1)' | grep -iE '^(v.*)$' | sort -Vr | head -1 )" >> $GITHUB_ENV
+          echo "LAST_TAG=$( git tag --sort=-committerdate | head -1 )" >> $GITHUB_ENV
 
       - name: Install dependencies
         run: |
