--- a/.github/workflows/do-release.yml
+++ b/.github/workflows/do-release.yml
@@ -23,20 +23,21 @@ jobs:
         with:
           python-version: '3.x'
 
-      - name: Setup Git
-        run: |
-          git config user.name " PiDroid-B Action New release"
-          git config user.email 'pidroid-b@users.noreply.github.com'
-          git remote set-url origin https://x-access-token:${{ secrets.AC_GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
-          git checkout "${GITHUB_REF:11}"
-
       - name: Setup env variables
         run: |
           set -x
           echo "SKIPBUMP=FALSE" >> $GITHUB_ENV
           echo "BRANCH=${GITHUB_REF:11}" >> $GITHUB_ENV
           echo "OLD_VERSION=$(awk '/^current_version/{print $3}' .bumpversion.cfg)" >> $GITHUB_ENV
-          echo "LAST_TAG=$( git tag --sort=-committerdate | head -1 )" >> $GITHUB_ENV
+          echo "LAST_TAG=$( git tag --sort=-committerdate -l v* )" >> $GITHUB_ENV
+
+      - name: Setup Git
+        run: |
+          git config user.name " PiDroid-B Action New release"
+          git config user.email 'pidroid-b@users.noreply.github.com'
+          git remote set-url origin https://x-access-token:${{ secrets.AC_GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
+          git checkout "${GITHUB_REF:11}
+          exit 1
 
       - name: Install dependencies
         run: |
