--- a/.github/workflows/do-release.yml
+++ b/.github/workflows/do-release.yml
@@ -29,7 +29,7 @@ jobs:
           echo "SKIPBUMP=FALSE" >> $GITHUB_ENV
           echo "BRANCH=${GITHUB_REF:11}" >> $GITHUB_ENV
           echo "OLD_VERSION=$(awk '/^current_version/{print $3}' .bumpversion.cfg)" >> $GITHUB_ENV
-          echo "LAST_TAG=$(git tag --sort=-committerdate -l 'v*')" >> $GITHUB_ENV
+          echo "LAST_TAG=$( git ls-remote --tags | grep -o 'refs/tags/v.*' | sort -Vr | head -1 | grep -o '[^\/]*$' )" >> $GITHUB_ENV
 
       - name: Setup Git
         run: |
