--- a/.github/workflows/do-release.yml
+++ b/.github/workflows/do-release.yml
@@ -33,10 +33,10 @@ jobs:
 
       - name: Setup Git
         run: |
-          git config user.name " PiDroid-B Action New release"
+          git config user.name 'PiDroid-B Action New release'
           git config user.email 'pidroid-b@users.noreply.github.com'
           git remote set-url origin https://x-access-token:${{ secrets.AC_GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
-          git checkout "${GITHUB_REF:11}
+          git checkout "${GITHUB_REF:11}"
 
       - name: Install dependencies
         run: |
