--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,5 +1,9 @@
 [bumpversion]
-current_version = 0.0.25
+current_version = 0.0.25.test_1
+parse = (?P<major>\d+).(?P<minor>\d+).?((?P<patch>\d+))?(\.(?P<branch>\w+)_(?P<build>\d+))?
+serialize = 
+	{major}.{minor}.{patch}.{branch}_{build}
+	{major}.{minor}.{patch}
 
 [bumpversion:file:pidroidbot_discord/__init__.py]
 search = __version__ = "{current_version}"
@@ -10,5 +14,5 @@ search = release = "v{current_version}"
 replace = release = "v{new_version}"
 
 [bumpversion:file:README.md]
-search = ##version##
+search = v{current_version}
 replace = v{new_version}
