--- a/.github/workflows/do-release.yml
+++ b/.github/workflows/do-release.yml
@@ -197,6 +197,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          apt-get update
+          apt-get install -y git
           git clone "https://token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git" .
         shell: bash
 
@@ -218,8 +220,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           I18N_COV: ${{ steps.i18nCoverage.outputs.coverage }}
-        run: |
-          apt-get update
-          apt-get install -y git
-          bash .ci/buildStatics.sh
+        run: "bash .ci/buildStatics.sh"
         shell: bash
