test ci 41.7 badge

--- a/.github/workflows/do-release.yml
+++ b/.github/workflows/do-release.yml
@@ -202,15 +202,15 @@ jobs:
           git clone "https://token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git" .
         shell: bash
 
-      - name: Check i18n coverage
-        id: i18nCoverage
-        uses: alexkiro/i18n-coverage@v1.0.0
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          translations-path: 'locales/**/LC_MESSAGES/*.po'
+#      - name: Check i18n coverage
+#        id: i18nCoverage
+#        uses: alexkiro/i18n-coverage@v1.0.0
+#        with:
+#          token: ${{ secrets.GITHUB_TOKEN }}
+#          translations-path: 'locales/**/LC_MESSAGES/*.po'
 
       - name: Check i18n coverage Documentation
-        id: i18nCoverageDoc
+        id: i18nCoverage
         uses: alexkiro/i18n-coverage@v1.0.1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
