--- a/.github/workflows/do-release.yml
+++ b/.github/workflows/do-release.yml
@@ -202,24 +202,24 @@ jobs:
           git clone "https://token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git" .
         shell: bash
 
-#      - name: Check i18n coverage
-#        id: i18nCoverage
-#        uses: alexkiro/i18n-coverage@v1.0.0
-#        with:
-#          token: ${{ secrets.GITHUB_TOKEN }}
-#          translations-path: 'locales/**/LC_MESSAGES/*.po'
-
-      - name: Check i18n coverage Documentation
+      - name: Check i18n coverage
         id: i18nCoverage
-        uses: alexkiro/i18n-coverage@v1.0.1
+        uses: alexkiro/i18n-coverage@v1.0.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          translations-path: 'docs/locales/**/LC_MESSAGES/*.po'
+          translations-path: 'locales/**/LC_MESSAGES/*.po'
+
+#      - name: Check i18n coverage Documentation
+#        id: i18nCoverage
+#        uses: alexkiro/i18n-coverage@v1.0.1
+#        with:
+#          token: ${{ secrets.GITHUB_TOKEN }}
+#          translations-path: 'docs/locales/**/LC_MESSAGES/*.po'
 
       - name: Execute script to build Statics (badges etc)
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           I18N_APPCOV: ${{ steps.i18nCoverage.outputs.coverage }}
-          I18N_DOCCOV: ${{ steps.i18nCoverageDoc.outputs.coverage }}
+#          I18N_DOCCOV: ${{ steps.i18nCoverageDoc.outputs.coverage }}
         run: "bash .ci/buildStatics.sh"
         shell: bash
