--- a/.github/workflows/do-release.yml
+++ b/.github/workflows/do-release.yml
@@ -66,6 +66,23 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           translations-path: 'locales/**/LC_MESSAGES/*.po'
 
+      - name: Check i18n coverage Docs
+        id: i18nCoverageDoc
+        uses: alexkiro/i18n-coverage@v1.0.1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          translations-path: 'docs/locales/**/LC_MESSAGES/*.po'
+
+      - name: Create json's files for bages i18n
+        run: |
+          # i18n Coverage
+          SRC="$(printf "%.1f" "${{ steps.i18nCoverageSrc.outputs.coverage }}")"
+          DOC="$(printf "%.1f" "${{ steps.i18nCoverageDoc.outputs.coverage }}")"
+
+          echo "{ \"schemaVersion\": 1, \"label\": \"i18n Coverage\", \"message\": \"${SRC} %\", \"color\": \"blueviolet\" }" > .ci/badges/i18n_appcov.json
+          echo "{ \"schemaVersion\": 1, \"label\": \"i18n Docs Coverage\", \"message\": \"${DOC} %\", \"color\": \"blueviolet\" }" > .ci/badges/i18n_doccov.json
+
+          git add .
 #      - name: Update Readme
 #        run: |
 #          # i18n Coverage
