--- a/.github/workflows/do-release.yml
+++ b/.github/workflows/do-release.yml
@@ -41,14 +41,17 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install bump2version setuptools wheel
-          pip install Babel
-          pip install -r docs/requirements.txt
+          pip install -r .ci/requirements.txt
+
+      - name: Generate coverage report
+        run: |
+          pytest --cov=./ --cov-report=xml
 
       - name: "Upload coverage to Codecov"
         uses: codecov/codecov-action@v1
-#        with:
-#          fail_ci_if_error: true
+        with:
+          fail_ci_if_error: true
+          verbose: true
 
       - name: Generate base.pot
         run: pybabel extract -o locales/base.pot pidroidbot_discord/
