test CI 51.1 on main

--- a/.github/workflows/do-release.yml
+++ b/.github/workflows/do-release.yml
@@ -50,9 +50,9 @@ jobs:
       - name: "Upload coverage to Codecov"
         uses: codecov/codecov-action@v1
         with:
-          fail_ci_if_error: true
           verbose: true
           files: ./coverage.xml
+#          fail_ci_if_error: true
 
       - name: Generate base.pot
         run: pybabel extract -o locales/base.pot pidroidbot_discord/
