--- a/.github/workflows/do-release.yml
+++ b/.github/workflows/do-release.yml
@@ -43,15 +43,15 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r .ci/requirements.txt
 
-      - name: Generate coverage report
-        run: |
-          pytest --cov=./ --cov-report=xml
-
-      - name: "Upload coverage to Codecov"
-        uses: codecov/codecov-action@v1
-        with:
-          verbose: true
-          files: ./coverage.xml
+#      - name: Generate coverage report
+#        run: |
+#          pytest --cov=./ --cov-report=xml
+#
+#      - name: "Upload coverage to Codecov"
+#        uses: codecov/codecov-action@v1
+#        with:
+#          verbose: true
+#          files: ./coverage.xml
 #          fail_ci_if_error: true
 
       - name: Generate base.pot
