test CI 51.3 on main

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -9,7 +9,7 @@ serialize =
 search = __version__ = "{current_version}"
 replace = __version__ = "{new_version}"
 
-[bumpversion:file:docs/source/conf.py]
+[bumpversion:file:docs/conf.py]
 search = release = "v{current_version}"
 replace = release = "v{new_version}"
 
