--- a/.github/workflows/do-release.yml
+++ b/.github/workflows/do-release.yml
@@ -207,7 +207,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r .ci/requirements_release.txt
+          pip install -r .ci/requirements_docs.txt
 
       - name: Execute script to build our documentation and update pages
         env:
