--- a/.github/workflows/do-release.yml
+++ b/.github/workflows/do-release.yml
@@ -208,6 +208,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r .ci/requirements_docs.txt
+          export PYTHONPATH=..
 
       - name: Execute script to build our documentation and update pages
         env:
