--- a/.github/workflows/do-release.yml
+++ b/.github/workflows/do-release.yml
@@ -207,6 +207,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install -r requirements.txt
           pip install -r .ci/requirements_docs.txt
           export PYTHONPATH=..
 
