--- a/.github/workflows/do-release.yml
+++ b/.github/workflows/do-release.yml
@@ -215,5 +215,6 @@ jobs:
       - name: Execute script to build our documentation and update pages
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DISCORD: ${{ secrets.TEST }}
         run: "bash .ci/buildDocs.sh"
         shell: bash
