--- a/.github/workflows/do-release.yml
+++ b/.github/workflows/do-release.yml
@@ -4,16 +4,51 @@ name: Build
 on:
   push:
     branches:
-      - main
-      - dev
-      - test
+      - pouet
+#      - main
+#      - dev
+#      - test
 
 jobs:
+  test:
+    name: Test
+    runs-on: ${{ matrix.platform }}
+    strategy:
+      matrix:
+        platform: [ubuntu-latest, macos-latest, windows-latest]
+        python-version: [3.6, 3.7, 3.8]
+    steps:
+      - name: checkout
+        uses: actions/checkout@v2
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip setuptools wheel
+          pip install coverage[toml] virtualenv tox tox-gh-actions
+
+      - name: Test with tox
+        run: tox
+
+      - name: "Upload coverage to Codecov"
+        uses: codecov/codecov-action@v1
+        with:
+          verbose: true
+          files: ./coverage.xml
+          fail_ci_if_error: true
+
+
   new_release:
     runs-on: ubuntu-latest
 #    if: "!startsWith(github.event.head_commit.message, '[SKIP]')"
     if: "1 == 0"
     name: New Release
+    needs: Test
+
 
     steps:
       - name: checkout
@@ -188,7 +223,7 @@ jobs:
   docs:
     runs-on: ubuntu-latest
     name: Documentations
-#    needs: new_release
+    needs: new_release
 
     steps:
       - name: Prereqs
