test CI 52.2 on tox

--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -1,10 +1,12 @@
 ---
-name: Push on main, dev or test
+name: Test CI
 
 on:
   push:
     branches:
-      - toxxxxx
+      - main
+      - dev
+      - test
 
 jobs:
   test:
